kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
  selector:
    app: backend
